[package]
name = "magit-libgit2"
version = "0.1.0"
authors = ["Nguyễn Tuấn Anh <ubolonton@gmail.com>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.34"
lazy_static = "1.0.0"
# emacs_module_bindings = { path = "../emacs_module_bindings" }
emacs_module_bindings = { git = "https://github.com/ubolonton/emacs_module_bindings", branch = "rework" }
emacs-rs-module = "0.1.0" # only for dev flow
git2 = "0.6"
