[package]
name = "magit-libgit2"
version = "0.1.0"
authors = ["Nguyễn Tuấn Anh <ubolonton@gmail.com>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.34"
lazy_static = "1.0.0"
emacs = { version = "0.4.0" }
git2 = "0.6"

[dev-dependencies]
emacs-rs-module = { version = "0.4.0" }
